# goldfinger

./: .gitignore  Makefile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
data/: xag.json.dict  xau.json.dict
goldfinger/: Dockerfile  __main__.py  app.py  entrypoint.sh  helpers.py  metals_api.py  pandas_helpers.py  pyproject.toml
redis/: Dockerfile  Makefile  docker-compose.yml  redis.conf
redis/redis-data/: dump.rdb
scripts/: ssh_load_api_key.sh
tools/: mkenv
